app1/calculationapp.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculationapp--deployment
  labels:
    app: calculationapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculationapp
  template:
    metadata:
      labels:
        app: calculationapp
    spec:
      containers:
      - name: calculationapp
        image: araheemcis/calculationapp:2
        ports:
        - containerPort: 8000
