app1/calculationapp.service.yml
apiVersion: v1
kind: Service
metadata:
  name: calculationapp
spec:
  selector:
      app: calculationapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31134
  type: NodePort
