app1/calculationapp.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculationappingress
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "homelab.com"
    http:
      paths:
      - pathType: Prefix
        path: "/calculationApp/"
        backend:
          service:
            name: calculationapp
            port:
              number: 8080
